--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 		<meta charset="UTF-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
 		<link rel="icon" type="image/png" sizes="32x32" href="./images/icon-ethereum.svg" />
-		<link rel="stylesheet" href="/styles/main.css" />
+		<link rel="stylesheet" href="./styles/main.css" />
 		<title>NFT preview card component</title>
 	</head>
 	<body class="flex">
