--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 	<head>
 		<meta charset="UTF-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
-		<link rel="icon" type="image/png" sizes="32x32" href="./images/icon-ethereum.svg" />
+		<link rel="icon" type="image/png" sizes="32x32" href="./images/image-equilibrium.jpg" />
 		<link rel="stylesheet" href="./styles/main.css" />
 		<title>NFT preview card component</title>
 	</head>
@@ -26,7 +26,7 @@
 					</i>
 				</div>
 			</div>
-			<h3>Equilibrium #3429</h3>
+			<h2>Equilibrium #3429</h2>
 			<p class="section__text">Our Equilibrium collection promotes balance and calm.</p>
 			<div class="flex-row">
 				<div class="section-item value">
