--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 					</i>
 				</div>
 			</div>
-			<h2>Equilibrium #3429</h2>
+			<h2 class="section__header">Equilibrium #3429</h2>
 			<p class="section__text">Our Equilibrium collection promotes balance and calm.</p>
 			<div class="flex-row">
 				<div class="section-item value">
